--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -14,7 +14,7 @@ header {
 
 .logo {
 	color: $white;
-	font-size: $font-size-l;
+	font-size: $font-size--m;
 	font-weight: 900;
 	padding: .5rem 0;
 	text-align: center;
