--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -53,6 +53,10 @@ p {
 	color: $brand-secondary;
 }
 
+.callout {
+	margin-bottom: 1rem;
+}
+
 @media (min-width: 768px){
 	.headline {
 		font-size: $font-size--xl;
